Added exclamation point on line 12

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello World!!</h1>
     <p>I'm hosted with GitHub Pages</p>
     <p>Just made some changes.</p>
-    <p>Hey hey hey</p>
+    <p>Hey hey hey!</p>
     <p>Here's another change</p>
     <p>Here's another change</p>
     <p>Here's another change</p>
